feature: introduced filesystem hierarchy between account and container levels